fix image cutoff of box shadow & mobile issues

--- a/static/global.css
+++ b/static/global.css
@@ -87,29 +87,6 @@ button:active, .button:active {
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
 }
 
-.profile {
-	display: flex;
-	justify-content: center;
-}
-.avatar {
-	height: 200px;
-	border-radius: 5px;
-	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-	transition: all 0.6s cubic-bezier(.25,.8,.25,1);
-	margin-right: 1rem;
-}
-.avatar:hover {
-	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-@media screen and (max-width: 690px) {
-	.profile {
-		flex-direction: column;
-	}
-	.avatar {
-		width: 200px;
-	}
-}
-
 @media screen and (max-width: 690px) {
 	.hide-phone {
 		display: none;
